force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>