force-app/main/default/objects/Resource__c/fields/Allocator_ID__c.field-meta.xml
<CustomField>
    <fullName>Allocator_ID__c</fullName>
    <label>Allocator ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>