force-app/main/default/objects/Resource__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Mic</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Decoration</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>