force-app/main/default/objects/Resource__c/fields/Contact_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_1__c</fullName>
    <label>Contact Number 1</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>