force-app/main/default/objects/Resource__c/fields/Contact_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_2__c</fullName>
    <label>Contact Number 2</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>