force-app/main/default/objects/Resource__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>