force-app/main/default/objects/Resource__c/fields/Resource_Allocator_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Allocator_Name__c</fullName>
    <label>Resource Allocator Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>