force-app/main/default/objects/Resource__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Room Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>