force-app/main/default/objects/Resource__c/validationRules/Valid_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    LEN(Contact_Number_1__c) &lt;&gt; 10,
    NOT(
        REGEX(
            Contact_Number_1__c,
            &quot;^[0-9]{10}$&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Phone number must contain exactly 10 digits.</errorMessage>
</ValidationRule>