force-app/main/default/objects/Resource__c/validationRules/Valid_Phone_Number_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Phone_Number_2</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Contact_Number_2__c &lt; 6000000000,
    Contact_Number_2__c &gt; 9999999999
)</errorConditionFormula>
    <errorMessage>Phone number must contain exactly 10 digits.</errorMessage>
</ValidationRule>